src/test/deca/context/invalid/SansObjet/DeclVar-Or-string-float-float.deca
// Description:
//    Declaration of a string variable using || operation between a float variable and float .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.33) Illegal operand type.
// 
// Historique: 
//    cree le 11/01/2022 

{
    float x =  10.01; 
    float y = 2.5; 
    string z = 10.01 || 2.5; 
}
